--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -1,6 +1,81 @@
 patch:
   "menu/page_size": 9
-  "ascii_composer/switch_key/Shift_L": commit_text
-  key_binder:
-    bindings:
-      - {accept: "Shift+space", toggle: full_shape, when: always}
+  "ascii_composer/switch_key/Shift_L": commit_code
+  "key_binder/bindings": 
+    - {accept: comma, send: Page_Up, when: paging}
+    - {accept: period, send: Page_Down, when: has_menu}
+    - {accept: "Shift+space", toggle: full_shape, when: always}
+  recognizer:
+    patterns:
+      email: "^[A-Za-z][-_.0-9A-Za-z]*@.*$"
+      punct: "^/([0-9]0?|[A-Za-z]+)$"
+      reverse_lookup: "`[a-z]*'?$"
+      url: "^(www[.]|https?:|ftp[.:]|mailto:|file:).*$|^[a-z]+[.].+$"
+  punctuator:
+    full_shape:
+      " ": {commit: "　"}
+      "!": {commit: "！"}
+      "\"": {commit: "＂"}
+      "#": {commit: "＃"}
+      "$": {commit: "＄"}
+      "%": {commit: "％"}
+      "&": {commit: "＆"}
+      "'": {commit: "、"}
+      "(": {commit: "（"}
+      ")": {commit: "）"}
+      "*": {commit: "＊"}
+      "+": {commit: "＋"}
+      ",": {commit: "，"}
+      "-": {commit: "－"}
+      .: {commit: "。"}
+      "/": {commit: "／"}
+      ":": {commit: "："}
+      ";": {commit: "；"}
+      "<": {commit: "＜"}
+      "=": {commit: "＝"}
+      ">": {commit: "＞"}
+      "?": {commit: "？"}
+      "@": {commit: "＠"}
+      "[": {commit: "［"}
+      "\\": {commit: "＼"}
+      "]": {commit: "］"}
+      "^": {commit: "︿"}
+      _: {commit: "＿"}
+      "`": {commit: "‵"}
+      "{": {commit: "｛"}
+      "|": {commit: "｜"}
+      "}": {commit: "｝"}
+      "~": {commit: "～"}
+    half_shape:
+      "!": {commit: "!"}
+      "\"": {commit: "\""}
+      "#": {commit: "#"}
+      "$": {commit: "$"}
+      "%": {commit: "%"}
+      "&": {commit: "&"}
+      "'": {commit: "'"}
+      "(": {commit: "("}
+      ")": {commit: ")"}
+      "*": {commit: "*"}
+      "+": {commit: "+"}
+      ",": {commit: ","}
+      "-": {commit: "-"}
+      .: {commit: .}
+      "/": {commit: "/"}
+      ":": {commit: ":"}
+      ";": {commit: ";"}
+      "<": {commit: "<"}
+      "=": {commit: "="}
+      ">": {commit: ">"}
+      "?": {commit: "?"}
+      "@": {commit: "@"}
+      "[": {commit: "["}
+      "\\": {commit: "\\"}
+      "]": {commit: "]"}
+      "^": {commit: "^"}
+      _: {commit: _}
+      "`": {commit: "`"}
+      "{": {commit: "{"}
+      "|": {commit: "|"}
+      "}": {commit: "}"}
+      "~": {commit: "~"}
