add he he and hao ci

--- a/lazywei.dict.yaml
+++ b/lazywei.dict.yaml
@@ -48,4 +48,30 @@ import_tables:
   - luna_pinyin.cn_en
 ...
 
-哈羅 ccab
+ㄏ	he
+# ㄓ	zhi
+# ㄔ	chi
+# ㄕ	shi
+# ㄖ	ri
+# ㄗ	zi
+# ㄘ	ci
+# ㄙ	si
+# ㄧ	yi
+# ㄨ	wu
+# ㄩ	yu
+# ㄚ	a
+# ㄛ	o
+# ㄜ	e
+# ㄝ	eh
+# ㄞ	ai
+# ㄟ	ei
+# ㄠ	ao
+# ㄡ	ou
+# ㄢ	an
+# ㄣ	en
+# ㄤ	ang
+# ㄥ	eng
+# ㄦ	er
+
+ㄏㄏ		1
+好ㄘ		1
