--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -5,24 +5,14 @@ customization:
   modified_time: "Sat Feb 13 22:25:02 2021"
   rime_version: 1.5.3
 patch:
-  "ascii_composer/switch_key/Shift_L": commit_code
-  "key_binder/bindings":
-    - {accept: comma, send: Page_Up, when: paging}
-    - {accept: period, send: Page_Down, when: has_menu}
-    - {accept: "Shift+space", toggle: full_shape, when: always}
-  "menu/page_size": 9
+  ascii_composer/switch_key/Shift_L: commit_code
+  key_binder/bindings/@next: {accept: "Shift+space", toggle: full_shape, when: always}
+  menu/page_size: 9
+  recognizer/patterns/uppercase:
   punctuator:
     full_shape: {" ": {commit: "　"}, "!": {commit: "！"}, "\"": {commit: "＂"}, "#": {commit: "＃"}, "$": {commit: "＄"}, "%": {commit: "％"}, "&": {commit: "＆"}, "'": {commit: "、"}, "(": {commit: "（"}, ")": {commit: "）"}, "*": {commit: "＊"}, "+": {commit: "＋"}, ",": {commit: "，"}, "-": {commit: "－"}, .: {commit: "。"}, "/": {commit: "／"}, ":": {commit: "："}, ";": {commit: "；"}, "<": {commit: "＜"}, "=": {commit: "＝"}, ">": {commit: "＞"}, "?": {commit: "？"}, "@": {commit: "＠"}, "[": {commit: "［"}, "\\": {commit: "＼"}, "]": {commit: "］"}, "^": {commit: "︿"}, _: {commit: "＿"}, "`": {commit: "‵"}, "{": {commit: "｛"}, "|": {commit: "｜"}, "}": {commit: "｝"}, "~": {commit: "～"}}
     half_shape: {"!": {commit: "!"}, "\"": {commit: "\""}, "#": {commit: "#"}, "$": {commit: "$"}, "%": {commit: "%"}, "&": {commit: "&"}, "'": {commit: "'"}, "(": {commit: "("}, ")": {commit: ")"}, "*": {commit: "*"}, "+": {commit: "+"}, ",": {commit: ","}, "-": {commit: "-"}, .: {commit: .}, "/": {commit: "/"}, ":": {commit: ":"}, ";": {commit: ";"}, "<": {commit: "<"}, "=": {commit: "="}, ">": {commit: ">"}, "?": {commit: "?"}, "@": {commit: "@"}, "[": {commit: "["}, "\\": {commit: "\\"}, "]": {commit: "]"}, "^": {commit: "^"}, _: {commit: _}, "`": {commit: "`"}, "{": {commit: "{"}, "|": {commit: "|"}, "}": {commit: "}"}, "~": {commit: "~"}}
-  recognizer:
-    patterns: {email: "^[A-Za-z][-_.0-9A-Za-z]*@.*$", punct: "^/([0-9]0?|[A-Za-z]+)$", reverse_lookup: "`[a-z]*'?$", url: "^(www[.]|https?:|ftp[.:]|mailto:|file:).*$|^[a-z]+[.].+$"}
   schema_list:
     - {schema: luna_pinyin}
-    - {schema: luna_pinyin_simp}
-    - {schema: luna_pinyin_fluency}
-    - {schema: bopomofo}
     - {schema: bopomofo_tw}
-    - {schema: cangjie5}
-    - {schema: stroke}
-    - {schema: terra_pinyin}
     - {schema: luna_pinyin_tw}
