--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -55,4 +55,23 @@ import_tables:
 混	huen4	30%
 
 麻煩	ma2 fan2
+體脂	ti3 zhi1
 體脂	ti3 zhi3
+教學	jiao1 xue2
+地城	di4 cheng2
+阿災	a1 zai1
+倒立	dao3 li4
+街上	jie1 shang4
+旋風	xuan2 feng1
+芬恩	fen1 en1
+稀原	xi1 yuan2
+斑苔	ban1 tai2
+鍊成	lian4 cheng2
+連續技	lian2 xu4 ji4
+一起	yi4 qi3
+魅魔	mei4 mo2
+鐮刃	lian2 ren4
+闇黑	an4 hei1
+闇影	an4 ying3
+黑闇	hei1 an4
+闇夜	an4 ye4
