--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -50,6 +50,7 @@ import_tables:
 欸	ei4
 誒	ei2
 脂	zhi3
+尛	ma2
 混	huen2	10%
 混	huen3	60%
 混	huen4	30%
@@ -77,3 +78,5 @@ import_tables:
 闇影	an4 ying3
 黑闇	hei1 an4
 闇夜	an4 ye4
+石頭	shi2 tou2
+梗圖	geng3 tu2
