--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -50,9 +50,14 @@ import_tables:
 欸	ei4
 誒	ei2
 脂	zhi3
+頗	po3
+
 混	huen2	10%
 混	huen3	60%
 混	huen4	30%
+一	yi1	30%
+一	yi2	10%
+一	yi4	60%
 
 麻煩	ma2 fan2
 體脂	ti3 zhi1
@@ -67,11 +72,17 @@ import_tables:
 稀原	xi1 yuan2
 斑苔	ban1 tai2
 鍊成	lian4 cheng2
-連續技	lian2 xu4 ji4
-一起	yi4 qi3
 魅魔	mei4 mo2
 鐮刃	lian2 ren4
 闇黑	an4 hei1
 闇影	an4 ying3
 黑闇	hei1 an4
 闇夜	an4 ye4
+試試	shi4 shi4
+龜裂	guei1 lie4
+拳頭	quan2 tao2
+終焉	zhong1 yan1
+護妻	hu4 qi1
+
+連續技	lian2 xu4 ji4
+卑彌呼	bei1 mi2 hu1
