--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -88,6 +88,12 @@ import_tables:
 石頭	shi2 tou2
 梗圖	geng3 tu2
 強迫	qiang2 po4
+拳頭	quan2 tao2
+佛心	fo2 xin1
+蘋果	pin2 guo3
+薄荷	bo4 he2
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
+手裏劍	shou3 li3 jian4
+史萊姆	shi3 lai2 mu3
