--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -87,6 +87,12 @@ import_tables:
 護妻	hu4 qi1
 石頭	shi2 tou2
 梗圖	geng3 tu2
+可撥	ke3 bo1
+屁股	pi4 gu3
+立蛋	li4 dan4
+爆氣	bao4 qi4
+衣服	yi1 fu2
+但是	dan4 shi4
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
