--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -53,6 +53,7 @@ import_tables:
 頗	po3
 尛	ma2
 俄	e4
+崁	kan3
 
 混	huen2	10%
 混	huen3	60%
@@ -104,6 +105,7 @@ import_tables:
 武藏	wu3 zang4
 私訊	si1 xun4
 直播	zhi2 bo1
+南崁	nan2 kan3
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
