--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -54,6 +54,7 @@ import_tables:
 尛	ma2
 俄	e4
 崁	kan3
+鄙	bi4
 
 混	huen2	10%
 混	huen3	60%
@@ -84,10 +85,8 @@ import_tables:
 黑闇	hei1 an4
 闇夜	an4 ye4
 龜裂	guei1 lie4
-拳頭	quan2 tao2
 終焉	zhong1 yan1
 護妻	hu4 qi1
-石頭	shi2 tou2
 梗圖	geng3 tu2
 可撥	ke3 bo1
 屁股	pi4 gu3
@@ -96,7 +95,6 @@ import_tables:
 衣服	yi1 fu2
 但是	dan4 shi4
 強迫	qiang2 po4
-拳頭	quan2 tao2
 佛心	fo2 xin1
 蘋果	pin2 guo3
 薄荷	bo4 he2
@@ -106,6 +104,9 @@ import_tables:
 私訊	si1 xun4
 直播	zhi2 bo1
 南崁	nan2 kan3
+石頭	shi2 tou2
+拳頭	quan2 tou2
+罐頭	guan4 tou2
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
