--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -104,9 +104,14 @@ import_tables:
 私訊	si1 xun4
 直播	zhi2 bo1
 南崁	nan2 kan3
+玉米	yu4 mi3
+殺小	sa1 xiao3
+剩下	sheng4 xia4
+
 石頭	shi2 tou2
 拳頭	quan2 tou2
 罐頭	guan4 tou2
+斧頭	fu3 tou2
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
