--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -54,6 +54,7 @@ import_tables:
 尛	ma2
 俄	e4
 崁	kan3
+妮	ni2
 
 混	huen2	10%
 混	huen3	60%
@@ -106,8 +107,14 @@ import_tables:
 私訊	si1 xun4
 直播	zhi2 bo1
 南崁	nan2 kan3
+炮友	pao4 you3
+支語	zhi1 yu3
+鐵匠	tie3 jiang4
+困難	kuen4 nan2
+電競	dian4 jing4
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
 手裏劍	shou3 li3 jian4
 史萊姆	shi3 lai2 mu3
+龍紋鏊	long2 wen2 ao2
