--- a/mPinyin.dict.yaml
+++ b/mPinyin.dict.yaml
@@ -42,10 +42,7 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 import_tables:
   - luna_pinyin
-  - luna_pinyin.extended
-  - luna_pinyin.hanyu
-  - luna_pinyin.poetry
-  - luna_pinyin.cn_en
+  - luna_pinyin.idioms
 ...
 
 
