--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -57,6 +57,7 @@ import_tables:
 鄙	bi4
 嚼	jue2
 危	wei2
+識	shi4
 
 混	huen2	10%
 混	huen3	60%
@@ -116,9 +117,11 @@ import_tables:
 剩下	sheng4 xia4
 混淆	huen3 yao2
 豆腐	dou4 fu3
-記得	ji4 de2
 混合	huen3 he2
 諧咖	xie2 ka1
+認識	ren4 shi4
+
+記得	ji4 de2
 覺得	jue2 de2
 
 石頭	shi2 tou2
