--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -37,12 +37,12 @@
 name: mZhuyin
 version: "2021.02.13"
 sort: by_weight
-use_preset_vocabulary: true
+# use_preset_vocabulary: true
 #此處爲明月拼音擴充詞庫（基本）默認鏈接載入的詞庫，有朙月拼音官方詞庫、明月拼音擴充詞庫（漢語大詞典）、明月拼音擴充詞庫（詩詞）、明月拼音擴充詞庫（含西文的詞彙）。如果不需要加載某个詞庫請將其用「#」註釋掉。
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 import_tables:
   - terra_pinyin
-  - luna_pinyin.idioms
+  - mZhuyin.idioms
 ...
 
 痾	e1
@@ -58,6 +58,7 @@ import_tables:
 嚼	jue2
 危	wei2
 識	shi4
+謝	xie4
 
 混	huen2	10%
 混	huen3	60%
@@ -121,6 +122,7 @@ import_tables:
 諧咖	xie2 ka1
 認識	ren4 shi4
 喉嚨	hou2 long2
+謝謝	xie4 xie4
 
 記得	ji4 de2
 覺得	jue2 de2
