--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -61,6 +61,7 @@ import_tables:
 嗶	bi1
 犽	ya2
 蟎	man2
+𩵚	tu3
 
 混	huen2	10%
 混	huen3	60%
@@ -128,9 +129,11 @@ import_tables:
 咖哩	ga1 li3
 包括	bao1 gua1
 熟悉	shou2 xi1
-𩵚魠	tu3 tuo1
 背包	bei1 bao1
 魟魚	hong1 yu2
+𩵚魠	tu3 tuo1
+魚羹	yu2 geng1
+魚焿	yu2 geng1
 
 記得	ji4 de2
 覺得	jue2 de2
