--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -65,6 +65,7 @@ import_tables:
 曳	yi4
 柏	bo2
 穹	qiong1
+躍	yao4
 
 混	huen2	10%
 混	huen3	60%
@@ -137,6 +138,7 @@ import_tables:
 𩵚魠	tu3 tuo1
 魚羹	yu2 geng1
 魚焿	yu2 geng1
+偽裝	wei3 zhung1
 
 記得	ji4 de2
 覺得	jue2 de2
