--- a/mZhuyin.lol.dict.yaml
+++ b/mZhuyin.lol.dict.yaml
@@ -25,6 +25,8 @@ sort: by_weight
 # use_preset_vocabulary: true
 ...
 
+雙排	shung1 pai2
+
 # LOL台服詞庫: https://pinyin.sogou.com/dict/detail/index/50677
 阿卡莉
 阿璃
