--- a/bopomofo.custom.yaml
+++ b/bopomofo.custom.yaml
@@ -29,6 +29,8 @@ patch:
   # 載入朙月拼音擴充詞庫
   translator/dictionary: mZhuyin
   engine/processors/@last: express_editor
+  speller/algebra/@before 0: "derive/de5/de2/"
+  speller/algebra/@before 1: "derive/tou5/tou2/"
   speller/algebra/@before last: "derive/5/1/"
   recognizer/patterns/uppercase:
   editor/bindings/space: 
