sheng4 jian4, nai3 pao4, yi1 jian4 san1 lian2

--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -131,6 +131,8 @@ import_tables:
 魚焿	yu2 geng1
 偽裝	wei3 zhung1
 慕斯	mu4 si1
+聖劍	sheng4 jian4
+奶泡	nai3 pao4
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
@@ -138,3 +140,5 @@ import_tables:
 史萊姆	shi3 lai2 mu3
 龍紋鏊	long2 wen2 ao2
 路易莎	lu4 yi4 sha1
+
+一鍵三連	yi1 jian4 san1 lian2
