--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -79,6 +79,7 @@ import_tables:
 一	yi2
 混	huen3
 地	di5
+蹈	dao4
 
 麻煩	ma2 fan2
 嬰靈	ying1 ling2
@@ -137,6 +138,12 @@ import_tables:
 背刺	bei4 ci4
 保濕	bao3 shi1
 沒差	mei2 cha1
+集氣	ji2 qi4
+血條	xie3 tiao2
+霧門	wu4 men2
+慶記	qing4 ji4
+神作	shen2 zuo4
+週目	zhou1 mu4
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
@@ -145,3 +152,5 @@ import_tables:
 龍紋鏊	long2 wen2 ao2
 路易莎	lu4 yi4 sha1
 關廁所	guan1 ce4 suo3
+
+醫學奇蹟	yi1 xue2 qi2 ji1
