--- a/mZhuyin.genshin.dict.yaml
+++ b/mZhuyin.genshin.dict.yaml
@@ -27,8 +27,9 @@ sort: by_weight
 
 晶蝶	jing1 die2
 靈龕	ling2 kan1
+仙靈	xian1 ling2
 
-# 原神詞庫: https://pinyin.sogou.com/dict/detail/index/157959
+# 【原神】游戏词库: https://pinyin.sogou.com/dict/detail/index/157959
 阿贝多
 阿丑
 阿德菲
