wu2 tao4, ru3 jiao1

--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -151,6 +151,9 @@ import_tables:
 寶具	bao3 ju4
 尊爵	zun1 jue2
 估狗	gu1 gou3
+臥槽	wuo4 cao2
+都更	du1 gen1
+蒼蠅	cang1 ying2
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
@@ -162,7 +165,7 @@ import_tables:
 機機人	ji1 ji1 ren2
 
 醫學奇蹟	yi1 xue2 qi2 ji1
-不講武德	bu4 jion3 wu3 de2
+不講武德	bu4 jiang3 wu3 de2
 一鍵三連	yi1 jian4 san1 lian2
 大喊一聲	da4 han3 yi1 sheng1
 大腳一踢	da4 jiao3 yi1 ti1
