--- a/mZhuyin.dict.yaml
+++ b/mZhuyin.dict.yaml
@@ -152,8 +152,12 @@ import_tables:
 尊爵	zun1 jue2
 估狗	gu1 gou3
 臥槽	wuo4 cao2
-都更	du1 gen1
+都更	du1 geng1
 蒼蠅	cang1 ying2
+顏值	yian2 zhi2
+琵琶	pi2 pa2
+枇杷	pi2 pa2
+帳密	zhang4 mi4
 
 連續技	lian2 xu4 ji4
 卑彌呼	bei1 mi2 hu1
