--- a/mZhuyin.lol.dict.yaml
+++ b/mZhuyin.lol.dict.yaml
@@ -28,6 +28,7 @@ sort: by_weight
 雙排	shung1 pai2
 大決	da4 jue2
 致盲	zhi4 mang2
+吃兵	chi1 bing1
 
 # LOL台服詞庫: https://pinyin.sogou.com/dict/detail/index/50677
 阿卡莉
