--- a/mZhuyin.lol.dict.yaml
+++ b/mZhuyin.lol.dict.yaml
@@ -29,6 +29,7 @@ sort: by_weight
 大決	da4 jue2
 致盲	zhi4 mang2
 吃兵	chi1 bing1
+對線	duei4 xian4
 
 # LOL台服詞庫: https://pinyin.sogou.com/dict/detail/index/50677
 阿卡莉
