--- a/mZhuyin.h.dict.yaml
+++ b/mZhuyin.h.dict.yaml
@@ -34,9 +34,27 @@ sort: by_weight
 洩洩	xie4 xie4
 三圍	san1 wei2
 紓壓	shu1 ya1
-無套	wu2 tao4
+足交	zu2 jiao1
+# 腳交	jiao3 jiao1
 乳交	ru3 jiao1
+奶炮	nai3 pao4
+胸推	xong1 tuei1
+屁推	pi4 tuei1
+臀推	tuen2 tuei1
+無套	wu2 tao4
+內射	nei4 she4
+顏射	yan2 she4
 吸奶	xi1 nai3
+浣腸	wan3 chang2
+素人	su4 ren2
+喇舌	la3 she2
+吞精	tuen1 jiang1
+舔睪	tian3 gao1
+舔蛋	tian3 dan4
+舔肛	tian3 gang1
+舔菊	tian3 ju2
+# 舔鮑	tian3 bao4
+品鮑	pin3 bao4
 
 粉紅鮑	fen3 hong2 bao4
 加藤鷹	jia1 teng2 ying1
